# Twinverse

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Linux-Co-Op_w-gamescope.sh  Linux-coop.sh  Makefile  OPTIMIZATIONS.md  README.md  RESTART_GUI_CLEAN.sh  ZENITY_GUIDE.md  build-flatpak.sh  build.sh  check_dxvk_env.sh  clean.sh  inputplumber  inputplumber.c  install.sh  io.github.mall0r.Twinverse.yaml  io.github.mallor.MultiScope.metainfo.xml  io.github.mallor.MultiScope.yaml  linuxcoop.py  linuxcoop.sh  multiscope.py  package-appimage.sh  package-flatpak.sh  protoncoop.py  pyproject.toml  python-modules.json  requirements.txt  run.sh  run_linux_coop.sh  setup.py  test_flatpak.sh  test_gamescope_save.sh  test_zenity_sudo.py  twinverse.py  uninstall.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  ci_cd.yml  release.yml
docs/: CHANGELOG.md  GUIDE.es.md  GUIDE.md  GUIDE.pt-br.md  README.es.md  README.fr.md  README.pt-br.md  README.pt.md  conitnue_this.md
flatpak/: python-modules.json
profiles/: MeuJogo.profile  Palworld.json  Profile.json  example.json
res/: compiled.gresource  multiscope.desktop  resources.xml  twinverse.gresources.xml
res/styles/: style.css
scripts/: build.sh  clean.sh  create_release.sh  kwin_gamescope.js  kwin_gamescope_horizontal.js  kwin_gamescope_vertical.js  package-appimage.sh  package-flatpak.sh  update_metainfo.py  version_manager.py
share/applications/: io.github.mall0r.Twinverse.desktop
share/metainfo/: io.github.mall0r.Twinverse.metainfo.xml  io.github.mallor.MultiScope.metainfo.xml
src/: __init__.py  intercept_cwd.c
src/cli/: commands.py
src/core/: __init__.py  cache.py  config.py  (+4 more)
tests/: test_layout_settings.py  test_minimal.py  test_ui_update_fix.py
(+57 files in other folders)
