[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "twinverse"
dynamic = ["version"]
description = "Play any game from your Steam library in splitscreen or with multiple monitorsx"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Messias Junior", email = "messiasjuniormj705@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic>=2.0.0",
    "pygobject>=3.52.0",
    "evdev>=1.6.0",
    "pydbus",
    "screeninfo",
]

[project.optional-dependencies]
test = [
    "flake8-pyproject",
    "pre-commit",
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 120
target-version = ['py313', 'py314']

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--ignore=build-dir",
    "--ignore=builddir",
    "--ignore=.flatpak-builder",
    "--ignore=flatpak-repo",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial: marks tests that must run sequentially",
]
